<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="name"
            type="String" />
        <variable
            name="price"
            type="String" />
        <variable
            name="rank"
            type="String" />
        <variable
            name="marketCap"
            type="String" />
        <variable
            name="volume24h"
            type="String" />
        <variable
            name="percent24h"
            type="String" />
        <variable
            name="percent1h"
            type="String" />
        <variable
            name="percent7d"
            type="String" />
        <variable
            name="imgUrl"
            type="String" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_white"
        android:paddingHorizontal="@dimen/margin_medium"
        android:paddingVertical="@dimen/margin_medium"
        tools:context=".ui.detail.CurrencyDetailDialogFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_icon"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/margin_small"
            app:loadImg="@{imgUrl}"
            tools:background="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="@dimen/text_medium"
            android:text='@{name ?? "-"}'
            app:layout_constraintTop_toBottomOf="@id/iv_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="Bitcoin"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text='@{@string/price_with_dollar_sign(price ?? "-")}'
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12345 $"/>

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text="@string/label_rank"
            app:layout_constraintTop_toBottomOf="@id/divider_1"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text='@{@string/rank_with_sharp_sign(rank ?? "-")}'
            app:layout_constraintTop_toTopOf="@id/tv_title_rank"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_rank"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12345 $"/>

        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_title_rank"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_market_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text="@string/label_market_cap"
            app:layout_constraintTop_toBottomOf="@id/divider_2"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_market_cap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text='@{marketCap ?? "-"}'
            app:layout_constraintTop_toTopOf="@id/tv_title_market_cap"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_market_cap"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12345.23322"/>

        <View
            android:id="@+id/divider_3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_title_market_cap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_volume_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text="@string/label_volume_24h"
            app:layout_constraintTop_toBottomOf="@id/divider_3"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_volume_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text='@{volume24h ?? "-"}'
            app:layout_constraintTop_toTopOf="@id/tv_title_volume_24h"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_volume_24h"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12345.23322"/>

        <View
            android:id="@+id/divider_4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@android:color/darker_gray"
            app:layout_constraintTop_toBottomOf="@id/tv_title_volume_24h"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_percents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text="@string/label_percentage"
            app:layout_constraintTop_toBottomOf="@id/divider_4"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_percent_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text="@string/label_24h"
            app:layout_constraintTop_toBottomOf="@id/tv_title_percents"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_percent_24h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:textColorPercent="@{percent24h}"
            android:textSize="@dimen/text_medium"
            android:text='@{percent24h ?? "-"}'
            app:layout_constraintTop_toTopOf="@id/tv_title_percent_24h"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_percent_24h"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="12 %"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_percent_1h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text="@string/label_1h"
            app:layout_constraintTop_toBottomOf="@id/tv_title_percent_24h"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_percent_1h"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:textColorPercent="@{percent1h}"
            android:textSize="@dimen/text_medium"
            android:text='@{percent1h ?? "-"}'
            app:layout_constraintTop_toTopOf="@id/tv_title_percent_1h"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_percent_1h"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="32 %"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_percent_7d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:textColor="@color/black"
            android:textSize="@dimen/text_medium"
            android:text="@string/label_7d"
            app:layout_constraintTop_toBottomOf="@id/tv_title_percent_1h"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_percent_7d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:textColorPercent="@{percent7d}"
            android:textSize="@dimen/text_medium"
            android:text='@{percent7d ?? "-"}'
            app:layout_constraintTop_toTopOf="@id/tv_title_percent_7d"
            app:layout_constraintBottom_toBottomOf="@id/tv_title_percent_7d"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="15 %"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>